[project]
name = "jerry-s-game"
version = "0.1.0"
description = "My description"
authors = [
    {name = "Kolhozik91",email = "Kozya1991.ks@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
